INSTALL(DIRECTORY backends
  DESTINATION ${PythonQt_INSTALL_LIBRARY_DIR}/python2.7/site-packages/pythonqt/matplotlib)
INSTALL(FILES __init__.py
  DESTINATION ${PythonQt_INSTALL_LIBRARY_DIR}/python2.7/site-packages/pythonqt)
INSTALL(FILES __init__.py
  DESTINATION ${PythonQt_INSTALL_LIBRARY_DIR}/python2.7/site-packages/pythonqt/matplotlib)
